# offshoremethane

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/regions/: east_china_sea.yaml  gulf_of_mexico.yaml  north_sea.yaml  persian_gulf.yaml
configs/scenes/: baseline_hassi_messaoud.yaml
configs/validation/: imeo_mars.yaml
docs/: decisions.md  methods.md  references.bib  results.md
notebooks/: README.md
src/offshoreplume/: __init__.py  cli.py
src/offshoreplume/corrections/: __init__.py
src/offshoreplume/io/: __init__.py
src/offshoreplume/ml/: __init__.py
src/offshoreplume/quantification/: __init__.py
src/offshoreplume/retrieval/: __init__.py
src/offshoreplume/validation/: __init__.py
src/offshoreplume/viz/: __init__.py
tests/: test_smoke.py
