[project]
name = "offshoreplume"
version = "0.1.0"
description = "Detection and quantification of offshore methane super-emitter plumes from open Sentinel-2 imagery using the multi-band-multi-pass (MBMP) retrieval of Varon et al. 2021, extended for the offshore regime."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "OffshorePlume Project" }]
keywords = [
    "methane",
    "remote-sensing",
    "sentinel-2",
    "super-emitter",
    "offshore",
    "MBMP",
    "atmospheric-science",
]

# Runtime dependencies. Version ranges are conservative lower bounds; uv.lock
# pins the exact resolved versions for reproducibility.
dependencies = [
    # Earth Engine + geospatial I/O
    "earthengine-api>=1.0.0",
    "geemap>=0.32.0",
    "rasterio>=1.4.0",
    "xarray>=2024.10.0",
    "geopandas>=1.0.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.10",
    # Numerics
    "numpy>=1.26,<3.0",
    "pandas>=2.2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5.0",
    "pyarrow>=17.0",
    # ML
    "torch>=2.4.0",
    # Visualization
    "matplotlib>=3.9.0",
    "cartopy>=0.23.0",
    # Misc
    "requests>=2.32.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "types-PyYAML>=6.0",
    "types-requests>=2.32",
]

[project.urls]
Repository = "https://github.com/sparkxt-0318/offshoremethane"

[project.scripts]
offshoreplume = "offshoreplume.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/offshoreplume"]

# --------------------------------------------------------------------
# Tooling
# --------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # simplify
    "PL",  # pylint subset
]
ignore = [
    "E501",   # line length handled by formatter
    "PLR0913", # too many arguments — common in scientific code
    "PLR2004", # magic value comparisons — common in algorithms
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (skipped by default with -m 'not slow')",
    "integration: marks tests requiring network or Earth Engine auth",
]
